--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,7 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss"
+          "style":  "scss"
         }
       },
       "root": "",
@@ -28,6 +28,8 @@
               "src/assets"
             ],
             "styles": [
+
+              "../node_modules/bulma/css/bulma.css",
               "src/styles.scss"
             ],
             "scripts": []
